# proc-macro-workshop

./: Cargo.toml  main.rs
bitfield/: Cargo.toml
bitfield/impl/: Cargo.toml
bitfield/impl/src/: generate.rs  lib.rs
bitfield/src/: lib.rs
bitfield/tests/: 04-multiple-of-8bits.stderr
bitfield_derive/: Cargo.toml
bitfield_derive/src/: lib.rs
bitfield_lib/: Cargo.toml
bitfield_lib/src/: bitfield.rs  check.rs  checks.rs  derive_bitfield.rs  generate.rs  lib.rs  specifier.rs
bitfield_lib/src/specifier/: mod.rs
bitfield_lib/src/specifier/generate/: bitfield_type.rs  derive_bitfield_specifier.rs  mod.rs
bitfield_macros/: Cargo.toml
bitfield_macros/src/: lib.rs
builder/: Cargo.toml
builder/src/: helper.rs  lib.rs
builder/tests/: 02-create-builder.rs
debug/: Cargo.toml
debug/src/: helper.rs  lib.rs
debug_lib/: Cargo.toml
debug_lib/src/: lib.rs
seq/: Cargo.toml
seq/src/: lib.rs  seq.rs
seq_lib/: Cargo.toml
seq_lib/src/: lib.rs
seq_lib/src/seq/: mod.rs  simple_repetition.rs  tag_repetition.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
sorted_lib/: Cargo.toml
sorted_lib/src/: check.rs  enum_sorted.rs  lib.rs  match_sorted.rs  sorted.rs
