[package]
name = "proc-macro-workshop"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
members = [
    "bitfield",
    "builder",
    "debug",
    "debug_lib",
    "seq",
    "seq_lib",
    "sorted",
]

[[bin]]
name = "workshop"
path = "main.rs"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

derive_debug = { path = "debug" }

seq_lib = { path = "seq_lib" }
debug_lib = { path = "debug_lib" }

[workspace.dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
