[package]
name = "proc-macro-workshop"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
members = [
    "bitfield",
    "bitfield_derive",
    "bitfield_lib",
    "builder",
    "debug",
    "debug_lib",
    "seq",
    "seq_lib",
    "sorted",
    "sorted_lib",
]

[[bin]]
name = "workshop"
path = "main.rs"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

bitfield = { path = "bitfield" }
derive_debug = { path = "debug" }

bitfield_lib = { path = "bitfield_lib" }
debug_lib = { path = "debug_lib" }
seq_lib = { path = "seq_lib" }
sorted_lib = { path = "sorted_lib" }

[workspace.dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
