[package]
name = "proc-macro-workshop"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
members = [
    "bitfield",
    "bitfield_lib",
    "bitfield_macros",
    "builder",
    "debug",
    "debug_lib",
    "seq",
    "seq_lib",
    "sorted",
    "sorted_lib",
]

[[bin]]
name = "workshop"
path = "main.rs"

[workspace.dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
